adds common header

--- a/hello_world/Makefile
+++ b/hello_world/Makefile
@@ -2,6 +2,9 @@ CONFIG_MODULE_SIG=n
 obj-m += hello.o
 hello-y := src/hello_world.o
 
+ccflags-y := -I$(src)/../include
+ccflags-y += -I$(src)/include
+
 all: module
 
 module:
@@ -9,3 +12,9 @@ module:
 
 clean:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
+
+install:
+	insmod hello.ko
+
+uninstall:
+	rmmod hello.ko
